# flow: CollectReward
# intent:
# Open the app, collect the first reward, and verify it appears in Collected.
appId: ${MAESTRO_APP_ID}
onFlowStart:
  - runFlow: ../shared/_OnFlowStart.yaml
---
- waitForAnimationToEnd
- tapOn:
    id: CollectedBottomTab
- assertVisible: CollectedRewards
- assertNotVisible:
    id: RewardName
- tapOn:
    id: HomeBottomTab
- tapOn:
    id: CollectButton
- assertVisible:
    id: CollectButton
    enabled: false
- tapOn:
    id: CollectedBottomTab
- assertVisible:
    id: RewardName

- waitForAnimationToEnd
